--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body{
     background-color: #394648;
     height: 100vh;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -15,19 +16,25 @@ body{
 }
 main{
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    align-items: center;
+    padding-top: 40px;
+    text-align: center;
+}
+main>p{
+    padding: 40px 0;
+}
+footer{
+    padding-bottom: 20px;
 }
 .container {
+    height: 40vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 button{
     border: 1px solid black;
+    font-size: large;
     border-radius: 10px;
     padding: 20px 60px;
     background-color: #e3b505;
